@@ -10,6 +10,7 @@ kbd-chooser (1.44) UNRELEASED; urgency=low
   * Fix mispositioned arguments in the PLAIN rule in loadkeys.
   * Add support for parsing "CapsShift" in keymaps.  (Closes: #490611)
   * Update symbol tables to the one found in kbd 1.14.1.
+  * Merge unicode handling from kbd 1.14.1.
 
  -- Frans Pop <fjp@debian.org>  Thu, 29 May 2008 08:47:11 +0200
 
